RESOLVED FIXED208109
[LFC][IFC][Floats] Fix float box handling inside unbreakable content
https://bugs.webkit.org/show_bug.cgi?id=208109
Summary [LFC][IFC][Floats] Fix float box handling inside unbreakable content
alan
Reported 2020-02-23 11:11:44 PST
text<float box></float box>content is one unbreakable content with [float box] and [textcontent]
Attachments
Patch (11.88 KB, patch)
2020-02-23 11:18 PST, alan
no flags
Patch (11.99 KB, patch)
2020-02-24 11:50 PST, alan
no flags
Patch (11.99 KB, patch)
2020-02-24 11:55 PST, alan
no flags
Radar WebKit Bug Importer
Comment 1 2020-02-23 11:12:05 PST
alan
Comment 2 2020-02-23 11:18:44 PST
alan
Comment 3 2020-02-24 11:50:43 PST
Simon Fraser (smfr)
Comment 4 2020-02-24 11:53:33 PST
Float handling?
alan
Comment 5 2020-02-24 11:55:44 PST
WebKit Commit Bot
Comment 6 2020-02-24 13:15:25 PST
Comment on attachment 391564 [details] Patch Clearing flags on attachment: 391564 Committed r257236: <https://trac.webkit.org/changeset/257236>
WebKit Commit Bot
Comment 7 2020-02-24 13:15:27 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.