[LFC][IFC][Floats] Fix float box handling inside unbreakable content https://bugs.webkit.org/show_bug.cgi?id=208109 <rdar://problem/59708646>

Reviewed by Antti Koivisto.

We've been handling float boxes and other inline items as mutually exclusive content (in the context of unbreakable candidate runs).
While this works in most cases, when the unbreakable content includes float boxes, the layout
ends up being incorrect.
This patch is in preparation for making sure we process the inline content and the associated float boxes as one entity.
(e.g "text_<div style="float: left"></div>_content" produces an unbreakable inline content of [text_][_content] and an associated float box)

* layout/inlineformatting/LineLayoutContext.cpp:
(WebCore::Layout::isAtSoftWrapOpportunity):
(WebCore::Layout::LineCandidate::FloatContent::append):
(WebCore::Layout::LineCandidate::FloatContent::list const):
(WebCore::Layout::LineCandidate::FloatContent::reset):
(WebCore::Layout::LineCandidate::reset):
(WebCore::Layout::LineLayoutContext::layoutLine):
(WebCore::Layout::LineLayoutContext::nextContentForLine):
(WebCore::Layout::LineLayoutContext::tryAddingFloatContent):
(WebCore::Layout::LineLayoutContext::tryAddingFloatItem): Deleted.
* layout/inlineformatting/LineLayoutContext.h:


Canonical link: https://commits.webkit.org/221089@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257236 268f45cc-cd09-0410-ab3c-d52691b4dbfc